--- a/.github/workflows/ETL.yml
+++ b/.github/workflows/ETL.yml
@@ -1,6 +1,6 @@
 name: Daily ETL and Upload to Google Drive
 
-# 📅 Déclenchement : tous les jours à 03:00 UTC + possibilité manuelle
+# 📅 Déclenchement : tous les jours à 02:00 UTC + possibilité manuelle
 on:
   schedule:
     - cron: '0 2 * * *'   # 03:00  au Maroc selon la saison
@@ -17,19 +17,19 @@ jobs:
       ALPHAVANTAGE_API_KEY: ${{ secrets.ALPHAVANTAGE_API_KEY }}
 
     steps:
-    - name: 📥 Cloner le dépôt
+    - name: Cloner le dépôt
       uses: actions/checkout@v3
 
-    - name: 🐍 Installer Python
+    - name: Installer Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
 
-    - name: 📦 Installer les dépendances
+    - name: Installer les dépendances
       run: |
         python -m pip install --upgrade pip
         pip install pandas openpyxl google-api-python-client google-auth google-auth-oauthlib xlsxwriter
 
-    - name: 🚀 Lancer le script ETL
+    - name:  Lancer le script ETL
       run: |
         python etl_upload.py
